@@ -188,6 +188,15 @@
 		F904343B0D03971C004E3017 /* librets.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 55EE8499093E5AAA00812582 /* librets.a */; };
 		F90434580D039AEA004E3017 /* libantlr.a in Frameworks */ = {isa = PBXBuildFile; fileRef = F90434570D039AE9004E3017 /* libantlr.a */; };
 		F90434590D039AEA004E3017 /* libantlr.a in Frameworks */ = {isa = PBXBuildFile; fileRef = F90434570D039AE9004E3017 /* libantlr.a */; };
+		F9A133D00D5228E900FED80E /* libexpat.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 55BD565907FC3BBE00526D69 /* libexpat.a */; };
+		F9A133D10D5228E900FED80E /* libcurl.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 55BD565707FC3BA100526D69 /* libcurl.a */; };
+		F9A133D20D5228E900FED80E /* libboost_filesystem.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 55B7EAE3080EC4A900245DFA /* libboost_filesystem.a */; };
+		F9A133D90D52290300FED80E /* metadata.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 554AA16507FA0ECD00402C35 /* metadata.cpp */; };
+		F9A133DE0D523F0000FED80E /* librets.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 55EE8499093E5AAA00812582 /* librets.a */; };
+		F9A133E80D523FE400FED80E /* Options.cpp in Sources */ = {isa = PBXBuildFile; fileRef = F9A133E70D523FE400FED80E /* Options.cpp */; };
+		F9A133E90D523FE400FED80E /* Options.cpp in Sources */ = {isa = PBXBuildFile; fileRef = F9A133E70D523FE400FED80E /* Options.cpp */; };
+		F9A133EC0D52413400FED80E /* libboost_program_options.a in Frameworks */ = {isa = PBXBuildFile; fileRef = F9A133EB0D52413400FED80E /* libboost_program_options.a */; };
+		F9A133ED0D52413400FED80E /* libboost_program_options.a in Frameworks */ = {isa = PBXBuildFile; fileRef = F9A133EB0D52413400FED80E /* libboost_program_options.a */; };
 		F9BE9E510D0C96F500AD1B98 /* libantlr.a in Frameworks */ = {isa = PBXBuildFile; fileRef = F90434570D039AE9004E3017 /* libantlr.a */; };
 		F9BE9EC80D0C9E6600AD1B98 /* DisclosableView.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 55BD538D07FBB7BA00526D69 /* DisclosableView.framework */; };
 		F9F6CC860D12ED2700BDF053 /* DisclosableView.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 55BD538D07FBB7BA00526D69 /* DisclosableView.framework */; };
@@ -214,6 +223,13 @@
 			containerPortal = 554A9EA607F9F27F00402C35 /* Project object */;
 			proxyType = 1;
 			remoteGlobalIDString = 55EE8498093E5AAA00812582;
+			remoteInfo = librets;
+		};
+		F9A133DC0D523EEC00FED80E /* PBXContainerItemProxy */ = {
+			isa = PBXContainerItemProxy;
+			containerPortal = 554A9EA607F9F27F00402C35 /* Project object */;
+			proxyType = 1;
+			remoteGlobalIDString = 55EE8498093E5AAA00812582 /* librets */;
 			remoteInfo = librets;
 		};
 		F9BE9E870D0C97D000AD1B98 /* PBXContainerItemProxy */ = {
@@ -555,6 +571,9 @@
 		55F9061608FEFDD900D76E8C /* DefaultMetadataCollector.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; path = DefaultMetadataCollector.h; sourceTree = "<group>"; };
 		F90434570D039AE9004E3017 /* libantlr.a */ = {isa = PBXFileReference; lastKnownFileType = archive.ar; name = libantlr.a; path = lib/libantlr.a; sourceTree = ANTLR_DIR; };
 		F90D477E0CF8D29200B9AC65 /* search-response-extended-char.xml */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = text.xml; path = "search-response-extended-char.xml"; sourceTree = "<group>"; };
+		F9A133D70D5228E900FED80E /* metadata */ = {isa = PBXFileReference; explicitFileType = "compiled.mach-o.executable"; includeInIndex = 0; path = metadata; sourceTree = BUILT_PRODUCTS_DIR; };
+		F9A133E70D523FE400FED80E /* Options.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; path = Options.cpp; sourceTree = "<group>"; };
+		F9A133EB0D52413400FED80E /* libboost_program_options.a */ = {isa = PBXFileReference; lastKnownFileType = archive.ar; name = libboost_program_options.a; path = lib/libboost_program_options.a; sourceTree = BOOST; };
 		F9F6CDAC0D14877E00BDF053 /* search-response-error-extended.xml */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.xml; path = "search-response-error-extended.xml"; sourceTree = "<group>"; };
 /* End PBXFileReference section */
 
@@ -595,6 +614,7 @@
 				5552AB2208047683002288F1 /* libexpat.a in Frameworks */,
 				5552AB2308047683002288F1 /* libcurl.a in Frameworks */,
 				55B7EAE7080EC4AA00245DFA /* libboost_filesystem.a in Frameworks */,
+				F9A133ED0D52413400FED80E /* libboost_program_options.a in Frameworks */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -616,6 +636,18 @@
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
+		F9A133CC0D5228E900FED80E /* Frameworks */ = {
+			isa = PBXFrameworksBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+				F9A133DE0D523F0000FED80E /* librets.a in Frameworks */,
+				F9A133D00D5228E900FED80E /* libexpat.a in Frameworks */,
+				F9A133D10D5228E900FED80E /* libcurl.a in Frameworks */,
+				F9A133D20D5228E900FED80E /* libboost_filesystem.a in Frameworks */,
+				F9A133EC0D52413400FED80E /* libboost_program_options.a in Frameworks */,
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
 /* End PBXFrameworksBuildPhase section */
 
 /* Begin PBXGroup section */
@@ -630,6 +662,7 @@
 		554A9EA207F9F27F00402C35 = {
 			isa = PBXGroup;
 			children = (
+				F9A133EB0D52413400FED80E /* libboost_program_options.a */,
 				554AA18C07FA110900402C35 /* External Libraries */,
 				554AA19107FA117A00402C35 /* build */,
 				554AA16207FA0E9C00402C35 /* src */,
@@ -648,6 +681,7 @@
 				55BD57ED07FDAFE000526D69 /* test */,
 				5552AB19080475A2002288F1 /* get-object */,
 				55EE8499093E5AAA00812582 /* librets.a */,
+				F9A133D70D5228E900FED80E /* metadata */,
 			);
 			name = Products;
 			sourceTree = "<group>";
@@ -716,6 +750,7 @@
 				554AA16407FA0ECD00402C35 /* login.cpp */,
 				554AA16507FA0ECD00402C35 /* metadata.cpp */,
 				554AA16607FA0ECD00402C35 /* raw-rets.cpp */,
+				F9A133E70D523FE400FED80E /* Options.cpp */,
 				554AA16707FA0ECD00402C35 /* search.cpp */,
 				554AA16807FA0ECD00402C35 /* sql2dmql.cpp */,
 				554AA16907FA0ECD00402C35 /* xml.cpp */,
@@ -1347,6 +1382,23 @@
 			productReference = 55EE8499093E5AAA00812582 /* librets.a */;
 			productType = "com.apple.product-type.library.static";
 		};
+		F9A133C90D5228E900FED80E /* metadata */ = {
+			isa = PBXNativeTarget;
+			buildConfigurationList = F9A133D30D5228E900FED80E /* Build configuration list for PBXNativeTarget "metadata" */;
+			buildPhases = (
+				F9A133CA0D5228E900FED80E /* Sources */,
+				F9A133CC0D5228E900FED80E /* Frameworks */,
+			);
+			buildRules = (
+			);
+			dependencies = (
+				F9A133DD0D523EEC00FED80E /* PBXTargetDependency */,
+			);
+			name = metadata;
+			productName = "get-object";
+			productReference = F9A133D70D5228E900FED80E /* metadata */;
+			productType = "com.apple.product-type.tool";
+		};
 /* End PBXNativeTarget section */
 
 /* Begin PBXProject section */
@@ -1364,6 +1416,7 @@
 				554AA19B07FA129100402C35 /* iRets */,
 				55BD572A07FC9D7A00526D69 /* Disk Image */,
 				5552AB18080475A2002288F1 /* get-object */,
+				F9A133C90D5228E900FED80E /* metadata */,
 			);
 		};
 /* End PBXProject section */
@@ -1458,6 +1511,7 @@
 			buildActionMask = 2147483647;
 			files = (
 				5552AB1D080475D6002288F1 /* get-object.cpp in Sources */,
+				F9A133E90D523FE400FED80E /* Options.cpp in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -1603,6 +1657,15 @@
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
+		F9A133CA0D5228E900FED80E /* Sources */ = {
+			isa = PBXSourcesBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+				F9A133D90D52290300FED80E /* metadata.cpp in Sources */,
+				F9A133E80D523FE400FED80E /* Options.cpp in Sources */,
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
 /* End PBXSourcesBuildPhase section */
 
 /* Begin PBXTargetDependency section */
@@ -1620,6 +1683,11 @@
 			isa = PBXTargetDependency;
 			target = 55EE8498093E5AAA00812582 /* librets */;
 			targetProxy = F90434360D0396D8004E3017 /* PBXContainerItemProxy */;
+		};
+		F9A133DD0D523EEC00FED80E /* PBXTargetDependency */ = {
+			isa = PBXTargetDependency;
+			target = 55EE8498093E5AAA00812582 /* librets */;
+			targetProxy = F9A133DC0D523EEC00FED80E /* PBXContainerItemProxy */;
 		};
 		F9BE9E880D0C97D000AD1B98 /* PBXTargetDependency */ = {
 			isa = PBXTargetDependency;
@@ -2180,6 +2248,83 @@
 			};
 			name = Default;
 		};
+		F9A133D40D5228E900FED80E /* Development */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				COPY_PHASE_STRIP = NO;
+				GCC_OPTIMIZATION_LEVEL = 0;
+				HEADER_SEARCH_PATHS = (
+					"${BOOST}/include",
+					../librets/include,
+				);
+				LIBRARY_SEARCH_PATHS = (
+					"${SRCROO}/../../build/xcode/Development",
+					"$(EXPAT)/lib",
+					"$(CURL)/lib",
+					"$(ANTLR)/lib",
+					"$(BOOST)/lib",
+				);
+				OTHER_CFLAGS = "";
+				OTHER_LDFLAGS = "${BOOST}/lib/libboost_filesystem.a";
+				OTHER_REZFLAGS = "";
+				PRODUCT_NAME = metadata;
+				SECTORDER_FLAGS = "";
+				WARNING_CFLAGS = (
+					"-Wmost",
+					"-Wno-four-char-constants",
+					"-Wno-unknown-pragmas",
+				);
+				ZERO_LINK = NO;
+			};
+			name = Development;
+		};
+		F9A133D50D5228E900FED80E /* Deployment */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				COPY_PHASE_STRIP = YES;
+				HEADER_SEARCH_PATHS = ../librets/include;
+				LIBRARY_SEARCH_PATHS = (
+					"$(EXPAT)/lib",
+					"$(CURL)/lib",
+					"$(ANTLR)/lib",
+					"$(BOOST)/lib",
+				);
+				OTHER_CFLAGS = "";
+				OTHER_LDFLAGS = "";
+				OTHER_REZFLAGS = "";
+				PRODUCT_NAME = "get-object";
+				SECTORDER_FLAGS = "";
+				WARNING_CFLAGS = (
+					"-Wmost",
+					"-Wno-four-char-constants",
+					"-Wno-unknown-pragmas",
+				);
+			};
+			name = Deployment;
+		};
+		F9A133D60D5228E900FED80E /* Default */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				HEADER_SEARCH_PATHS = ../librets/include;
+				LIBRARY_SEARCH_PATHS = (
+					"$(EXPAT)/lib",
+					"$(CURL)/lib",
+					"$(ANTLR)/lib",
+					"$(BOOST)/lib",
+				);
+				OTHER_CFLAGS = "";
+				OTHER_LDFLAGS = "";
+				OTHER_REZFLAGS = "";
+				PRODUCT_NAME = "get-object";
+				SECTORDER_FLAGS = "";
+				WARNING_CFLAGS = (
+					"-Wmost",
+					"-Wno-four-char-constants",
+					"-Wno-unknown-pragmas",
+				);
+			};
+			name = Default;
+		};
 /* End XCBuildConfiguration section */
 
 /* Begin XCConfigurationList section */
@@ -2249,6 +2394,16 @@
 				55EE84A1093E5AE300812582 /* Development */,
 				55EE84A2093E5AE300812582 /* Deployment */,
 				55EE84A3093E5AE300812582 /* Default */,
+			);
+			defaultConfigurationIsVisible = 0;
+			defaultConfigurationName = Default;
+		};
+		F9A133D30D5228E900FED80E /* Build configuration list for PBXNativeTarget "metadata" */ = {
+			isa = XCConfigurationList;
+			buildConfigurations = (
+				F9A133D40D5228E900FED80E /* Development */,
+				F9A133D50D5228E900FED80E /* Deployment */,
+				F9A133D60D5228E900FED80E /* Default */,
 			);
 			defaultConfigurationIsVisible = 0;
 			defaultConfigurationName = Default;
